{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 102,
  "lineage": "b3a11583-6779-58be-e7f4-d9a6ddaeb681",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011e48799a29115e9",
            "arn": "arn:aws:ec2:us-east-1:263587492988:instance/i-00ed086a7742f9883",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "eks-worker-profile",
            "id": "i-00ed086a7742f9883",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Capstone-Project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085b756fd19840fb7",
            "private_dns": "ip-10-0-1-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.178",
            "public_dns": "ec2-3-80-176-171.compute-1.amazonaws.com",
            "public_ip": "3.80.176.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0771edd4dcc608bb6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae75abdda32f95fd",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0474148241cea4f6d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.worker",
            "aws_iam_role.worker",
            "aws_security_group.SG-project",
            "aws_subnet.subnet01",
            "aws_vpc.vpc-project",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263587492988:internet-gateway/igw-0edbffee27a53393b",
            "id": "igw-0edbffee27a53393b",
            "owner_id": "263587492988",
            "tags": {
              "Name": "Project-InternetGateway"
            },
            "tags_all": {
              "Name": "Project-InternetGateway"
            },
            "vpc_id": "vpc-0fc78c55e96ab5b59"
          },
          "dependencies": [
            "aws_vpc.vpc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263587492988:route-table/rtb-0e38141ee69c25fb7",
            "id": "rtb-0e38141ee69c25fb7",
            "owner_id": "263587492988",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0edbffee27a53393b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RoutTable-Project"
            },
            "tags_all": {
              "Name": "RoutTable-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc78c55e96ab5b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_vpc.vpc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-Associate-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e8e39a348acefb1",
            "route_table_id": "rtb-0e38141ee69c25fb7",
            "subnet_id": "subnet-0ae75abdda32f95fd"
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_route_table.RT-project",
            "aws_subnet.subnet01",
            "aws_vpc.vpc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-Associate-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001bf10f0495b4a26",
            "route_table_id": "rtb-0e38141ee69c25fb7",
            "subnet_id": "subnet-0108ebcdd56f43b4f"
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_route_table.RT-project",
            "aws_subnet.subnet02",
            "aws_vpc.vpc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263587492988:security-group/sg-0474148241cea4f6d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0474148241cea4f6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Project-SecurityGroup",
            "name_prefix": "",
            "owner_id": "263587492988",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc78c55e96ab5b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263587492988:subnet/subnet-0ae75abdda32f95fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae75abdda32f95fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263587492988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet 01"
            },
            "tags_all": {
              "Name": "Subnet 01"
            },
            "vpc_id": "vpc-0fc78c55e96ab5b59"
          },
          "dependencies": [
            "aws_vpc.vpc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263587492988:subnet/subnet-0108ebcdd56f43b4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0108ebcdd56f43b4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263587492988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet 02"
            },
            "tags_all": {
              "Name": "Subnet 02"
            },
            "vpc_id": "vpc-0fc78c55e96ab5b59"
          },
          "dependencies": [
            "aws_vpc.vpc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263587492988:vpc/vpc-0fc78c55e96ab5b59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06af6e54c4e00ff00",
            "default_route_table_id": "rtb-0454788fec312a04c",
            "default_security_group_id": "sg-0b9c1f421c6afb92a",
            "dhcp_options_id": "dopt-0bcdab0bb88b538c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc78c55e96ab5b59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0454788fec312a04c",
            "owner_id": "263587492988",
            "tags": {
              "Name": "poject-vpc"
            },
            "tags_all": {
              "Name": "poject-vpc"
            }
          }
        }
      ]
    }
  ]
}